--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zsa": "^0.6.0",
+    "zsa-react": "^0.2.2"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
