--- a/package.json
+++ b/package.json
@@ -45,14 +45,12 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
-    "@trpc/client": "11.0.0-rc.498",
-    "@trpc/react-query": "11.0.0-rc.498",
-    "@trpc/server": "11.0.0-rc.498",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.33.0",
+    "effect": "^3.7.2",
     "embla-carousel-react": "^8.2.0",
     "geist": "^1.3.0",
     "input-otp": "^1.2.4",
