--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@effect/sql-drizzle": "^0.8.2",
+    "@effect/sql-pg": "^0.10.2",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
