--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.2",
     "recharts": "^2.12.7",
+    "resend": "^4.0.0",
     "server-only": "^0.0.1",
     "sonner": "^1.5.0",
     "superjson": "^2.2.1",
